Mainly tmux mappings to be similar to vim mappings

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,45 @@
+# force tmux to assume 256 colors
 set -g default-terminal screen-256color
+
+# remap the prefix key to ctrl-a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# map r to force a reload of the tmux config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# allow mouse to scroll
+set -g mouse on
+
+# other
+set -g status-keys vi # for working in the status line
+set -g history-limit 10000
+
+# changes copy mode to use vi mappings
+setw -g mode-keys vi
+
+# changes status line to use vi mappings
+setw -g monitor-activity on
+
+# mappings for splitting windows
+bind-key v split-window -h
+bind-key s split-window -v
+
+# vim hjkl to resize panes
+bind-key H resize-pane -L 5
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key L resize-pane -R 5
+
+bind-key M-h resize-pane -L
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-l resize-pane -R
+
+# vim alt-hjkl pane selection (no prefix)
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
