Terminal colors alias, tmux window splits and clean up keybinding syntax...

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,14 +7,13 @@ unbind C-b
 bind C-a send-prefix
 
 # map r to force a reload of the tmux config file
-unbind r
 bind r source-file ~/.tmux.conf
 
 # allow mouse to scroll
 set -g mouse on
 
 # other
-set -g status-keys vi # for working in the status line
+set -g status-keys vi
 set -g history-limit 10000
 
 # changes copy mode to use vi mappings
@@ -24,22 +23,22 @@ setw -g mode-keys vi
 setw -g monitor-activity on
 
 # mappings for splitting windows
-bind-key v split-window -h
 bind-key s split-window -v
+bind-key v split-window -h
 
 # vim hjkl to resize panes
-bind-key H resize-pane -L 5
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key L resize-pane -R 5
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
-bind-key M-h resize-pane -L
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-l resize-pane -R
+bind M-h resize-pane -L
+bind M-j resize-pane -D
+bind M-k resize-pane -U
+bind M-l resize-pane -R
 
-# vim alt-hjkl pane selection (no prefix)
-bind-key -n M-h select-pane -L
-bind-key -n M-j select-pane -D
-bind-key -n M-k select-pane -U
-bind-key -n M-l select-pane -R
+# vij alt-hjkl pane selection (no prefix)
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
